@@ -1,3 +1,9 @@
+2005-11-29 Bernhard Held <bernhard AT bernhardheld.de>
+
+	* src/SDCCast.c (decorateType): fixed bug 1368489
+	* support/Util/SDCCerr.c,
+	* support/Util/SDCCerr.h: added warning W_CMP_SU_CHAR
+
 2005-11-28 Frieder Ferlemann <Frieder.Ferlemann AT web.de>
 
 	* device/include/mcs51/at89c51snd1c.h: added file submitted by 
